Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubernetes-sonarqube
  namespace: sonarqube
  labels:
    app: kubernetes-sonarqube
spec:
 replicas: 1
 selector:
   matchLabels:
     app: kubernetes-sonarqube
 template:
  metadata:
     labels:
       app: kubernetes-sonarqube    
  spec:
    volumes:
      - name: sonarqube-data
        persistentVolumeClaim:
          claimName: kubernetes-sonarqube
      - name: sonarqube-logs
        emptyDir: {}
    containers:
    - name: kubernetes-sonarqube
      image: sonarqube:latest
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 512Mi
      volumeMounts:
      - mountPath: "/opt/sonarqube/data"
        name: sonarqube-data
      - mountPath: "/opt/sonarqube/logs"
        name: sonarqube-logs
